# asahi-env

./: .gitignore  AGENTS.md  Cargo.toml  bootstrap.md
.cargo/: config.toml
.github/prompts/: alignment-review.prompt.md
docs/agent-context/: README.md  axioms.system.toml  axioms.workflow.toml  feedback.toml  ideas.toml  plan.toml
docs/agent-context/current/: implementation-plan.toml  task-list.toml  walkthrough.toml
docs/agent-context/research/: bambu-studio-experiment.md  doctor-20251218-174617.json  doctor-20251218-222241.json  doctor-20251218-222835.json  doctor-20251218-223518.json  doctor-20251219-114124.json  doctor-20251219-121441-sudo.json  doctor-20251219-121951-sudo.json  doctor-diff-20251218-222241.json  doctor-diff-20251218-222835.json  doctor-diff-20251218-223518.json  doctor-diff-20251219-114124-vs-20251218-223518.json  doctor-diff-20251219-121441-sudo-vs-114124-nosudo.json  edge-muvm-experiment.md  edge-muvm-pthread-create-eagain.md  muvm-fex-smoketest-krita-appimage.md  muvm-gui-smoketest-gimp.md  muvm-timeout-tty-job-control.md  probes-catalog.md  resume-next-chat.md
docs/design/: axioms.design.toml  manifesto.md
docs/manual/: README.md  bazzite-setup.md  build-system.md  host-inventory.md  manifesto-crosswalk.md
docs/manual/doctor/: probes.md
docs/rfcs/stage-0/: 0001-semantic-modifiers-cmd-ctrl-option-super-on-gnome-with-keyd-.md  0002-dfn-like-copr-backed-rpm-installer-with-muvm-shims.md  0003-generic-appimage-runner-for-muvm-fex.md  0005-rust-native-orchestrator-for-appimages-via-muvm-fex.md
docs/rfcs/stage-1/: 0002-doctor-probe-capability--skip-semantics.md  002-fedora-native-runtime.md
scripts/: build-fedora-base.sh  build-vendored-muvm.sh  check-rfcs-nonempty.sh  edge-muvm-experiment.sh  verify-phase.sh
tools/appimage-runner/: Cargo.toml  README.md
tools/appimage-runner/src/: main.rs
tools/asahi-setup/: Cargo.toml  README.md
tools/asahi-setup/src/: main.rs
tools/asahi-setup/src/ops/: doctor.rs  mod.rs  spotlight.rs  titdb.rs  util.rs
tools/bazzite-setup/: Cargo.toml
tools/bazzite-setup/src/: main.rs
tools/book/: book.toml
tools/book/src/: SUMMARY.md  install.md  overview.md  tools.md  troubleshooting.md  verification.md  workflows.md
tools/edge-muvm-experiment/: Cargo.toml
tools/edge-muvm-experiment/src/: main.rs
tools/fedora-builder/: Cargo.toml
tools/fedora-builder/src/: main.rs
tools/fex-gen-overlay/: Cargo.toml
tools/fex-gen-overlay/src/: main.rs
tools/fex-overlay/: Cargo.toml
tools/fex-overlay/src/: main.rs
tools/host-inventory/: Cargo.toml
tools/host-inventory/src/: main.rs
tools/install-asahi-setup/: Cargo.toml
tools/install-asahi-setup/src/: main.rs
tools/sniper-overlay/: Cargo.toml
tools/x11-opcodes/: Cargo.toml
tools/x11-opcodes/src/: main.rs
(+12 files in other folders)
