[workspace]
resolver = "2"
members = [
  "tools/asahi-setup",
  "tools/install-asahi-setup",
  "tools/edge-muvm-experiment",
  "tools/appimage-runner",
  "tools/host-inventory",
  "tools/bazzite-setup",
  "tools/x11-opcodes",
  "tools/fex-overlay",
  "tools/sniper-overlay",
  "tools/fedora-builder",
]
