[package]
name = "asahi-setup"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
systemd = { version = "0.10", features = ["journal"] }

[dev-dependencies]
pretty_assertions = "1"
