[[bin]]
name = "fedora-builder"
path = "src/main.rs"

[[bin]]
name = "sniper-extractor"
path = "src/bin/sniper-extractor.rs"

[[bin]]
name = "appimage-inspector"
path = "src/bin/appimage-inspector.rs"

[package]
name = "fedora-builder"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
cmd_lib = "1.3"
nix = { version = "0.27", features = ["user"] }
tempfile = "3.8"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
elf = "0.7"
walkdir = "2.5.0"
