[package]
name = "host-inventory"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
nix = { version = "0.30", default-features = false, features = ["user"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
which = "7"
